--- a/IDisposable/IDisposablePattern/IDisposablePattern/IDisposablePattern.csproj
+++ b/IDisposable/IDisposablePattern/IDisposablePattern/IDisposablePattern.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DatabaseState.cs" />
+    <Compile Include="DatabaseStateImpr.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
