--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ solution: DesignPatterns.sln
 install:
     - nuget install NUnit.Runners -Version 3.8.0 -OutputDirectory testrunner
 script:
-    - xbuild /p:COnfiguration=Release DesignPatterns.sln
+    - msbuild /p:Configuration=Release DesignPatterns.sln
     - mono ./testrunner/NUnit.Runners.3.8.0/tools/nunit-console.exe ./Tests/bin/Release/Tests.dll
