--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: csharp
 solution: DesignPatterns.sln
 install:
     - nuget install NUnit.Runners -Version 3.8.0 -OutputDirectory testrunner
+    - nuget restore DesignPatterns.sln
 script:
     - msbuild /p:Configuration=Release DesignPatterns.sln
     - mono ./testrunner/NUnit.Runners.3.8.0/tools/nunit-console.exe ./Tests/bin/Release/Tests.dll
