--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
 language: csharp
 solution: DesignPatterns.sln
 install:
-    - nuget install NUnit.ConsoleRunner -OutputDirectory testrunner
-    - nuget restore DesignPatterns.sln
+    - nuget install NUnit.ConsoleRunner -OutputDirectory testutils
+    - nuget install OpenCover -OutputDirectory testutils
+    - dotnet restore DesignPatterns.sln
 script:
     - msbuild /p:Configuration=Release DesignPatterns.sln
-    - mono ./testrunner/NUnit.ConsoleRunner.*/tools/nunit3-console.exe ./Tests/bin/Release/net462/Tests.dll
+    - mono ./testutils/NUnit.ConsoleRunner.*/tools/nunit3-console.exe ./Tests/bin/Release/net462/Tests.dll
+    - mono ./testutils/OpenCover.Console.exe -register:user -target:./scripts/tests.sh -searchdir:../Tests/bin/Debug/net462 -output:coveragereport.xml
+cache:
+    - .nuget/packages
