--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: csharp
+dotnet: 2.0.0
 solution: DesignPatterns.sln
 install:
     - nuget install NUnit.ConsoleRunner -OutputDirectory testutils
