--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
     - dotnet restore DesignPatterns.sln
 script:
     - msbuild /p:Configuration=Release DesignPatterns.sln
-    - mono ./testutils/NUnit.ConsoleRunner.*/tools/nunit3-console.exe ./Tests/bin/Release/net462/Tests.dll
-    - mono ./testutils/OpenCover.Console.exe -register:user -target:./scripts/tests.sh -searchdir:../Tests/bin/Debug/net462 -output:coveragereport.xml
+    - mono ./testutils/NUnit.ConsoleRunner.*/tools/nunit3-console.exe ./Tests/bin/Release/net462/Tests.dli
+    - mono ./testutils/opencover*/tools/OpenCover.Console.exe -register:user -target:./scripts/tests.sh -searchdir:../Tests/bin/Debug/net462 -output:coveragereport.xml
 cache:
     - .nuget/packages
