--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ install:
 script:
     - msbuild /p:Configuration=Release DesignPatterns.sln
     - mono ./testutils/NUnit.ConsoleRunner.*/tools/nunit3-console.exe ./Tests/bin/Release/net462/Tests.dll
-    - mono ./testutils/opencover*/tools/OpenCover.Console.exe -register:user -target:./scripts/tests.sh -searchdir:../Tests/bin/Debug/net462 -output:coveragereport.xml
+    - ls -R | grep 'opencover'
 cache:
     - .nuget/packages
