Fixed cache declaration.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,5 @@ script:
     - msbuild /p:Configuration=Release DesignPatterns.sln
     - mono ./testutils/NUnit.ConsoleRunner.*/tools/nunit3-console.exe ./tests/DataStructures.UnitTests/bin/Release/net462/*UnitTests.dll ./tests/DesignPatterns.UnitTests/bin/Release/net462/*UnitTests.dll
 cache:
+    directories:
     - .nuget/packages
