Moved data structures into another repository.

--- a/tests/DesignPatterns.UnitTests/DesignPatterns.UnitTests.csproj
+++ b/tests/DesignPatterns.UnitTests/DesignPatterns.UnitTests.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\DesignPatterns\DesignPatterns.csproj" />
+    <ProjectReference Include="..\..\src\DesignPatterns\DesignPatterns.csproj" />
   </ItemGroup>
 
 </Project>
