Fixing travis build.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ install:
     - dotnet restore DesignPatterns.sln
 script:
     - msbuild /p:Configuration=Release DesignPatterns.sln
-    - mono ./testutils/NUnit.ConsoleRunner.*/tools/nunit3-console.exe ./tests/DataStructures.UnitTests/bin/Release/net462/*UnitTests.dll ./tests/DesignPatterns.UnitTests/bin/Release/net462/*UnitTests.dll
+    - mono ./testutils/NUnit.ConsoleRunner.*/tools/nunit3-console.exe ./tests/DesignPatterns.UnitTests/bin/Release/net462/*UnitTests.dll
 cache:
     - .nuget/packages
+111
